<resources>
    <string name="app_name">COMP3025-W24-Assignment-4</string>
    <string name="todoTitle">To Do Item</string>
    <string name="todoDescription">To Do Description</string>
    <string name="todoDueDate">To Do Due Date</string>

    <string name="listTitle">☰ To Do List</string>
    <string name="detailsTitle">✓ To Do Details</string>

    <string name="deleteButton">Delete</string>
    <string name="cancelButton">Cancel</string>
    <string name="updateButton">Update</string>
    <string name="saveButton">Create</string>

    <string name="fabDesc">Add a Todo</string>

    <string name="todoDetailsLabel">To Do Item:</string>
    <string name="todoDetailsDescriptionLabel">To Do Notes:</string>
    <string name="todoDetailsDueDate">To Do Notes:</string>
    <string name="todoDetailsStatus">To Do Completed:</string>
    <string name="todoCreateTitle">+ New To Do</string>

    <string name="calendarStatusLabel">Calendar Enabled:</string>



</resources>