<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:layout_marginLeft="@dimen/margin_medium"
    android:layout_marginRight="@dimen/margin_medium"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/todoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todoTitle"
            android:textSize="@dimen/cell_text_size"
            android:textStyle="bold"
            android:textColor="@color/todoTitle"/>

        <TextView
            android:id="@+id/todoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todoDescription"
            android:textColor="@color/todoDescription" />

        <TextView
            android:id="@+id/todoDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todoDueDate"
            android:textColor="@color/todoDueDate" />

    </LinearLayout>
    <Switch
        android:id="@+id/todoMainStatusSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        />

    <!-- This is the ImageView to display the SVG -->
    <ImageView
        android:id="@+id/svgImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/edit_1479_svgrepo_com"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="60dp"
        android:onClick="onEditButtonClick"/>



</RelativeLayout>
