<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackGround"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="412dp"
        android:layout_height="250px"
        android:background="@color/mainBackGround"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/todoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailsTitle"
            android:textColor="@color/todoTitle"
            android:textSize="@dimen/cell_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_bottom"
        android:layout_width="412dp"
        android:layout_height="250px"
        android:background="@color/roundedColourBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="768dp">

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/delete_button"
            android:text="@string/deleteButton"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/cancel_button"
            android:text="@string/cancelButton"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:background="@drawable/update_button"
            android:text="@string/updateButton"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="400dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="350dp"
            android:layout_height="350dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
