<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackGround"
    tools:context=".CreateNewTodoActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="412dp"
        android:layout_height="250px"
        android:background="@color/mainBackGround"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/todoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todoCreateTitle"
            android:textColor="@color/todoTitle"
            android:textSize="@dimen/title"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_bottom"
        android:layout_width="412dp"
        android:layout_height="250px"
        android:background="@color/roundedColourBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/cancel_button"
            android:text="@string/cancelButton"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:background="@drawable/update_button"
            android:text="@string/saveButton"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="412dp"
        android:layout_height="320dp"
        android:background="@drawable/rounded_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="330dp"
            android:layout_height="310dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/todoTitleDetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todoDetailsLabel"
                android:textSize="@dimen/cell_text_size"
                android:textStyle="bold"
                android:textColor="@color/todoTitle"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/todoTitleDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="                                   "
                android:textColor="@color/todoTitle"
                android:textSize="@dimen/cell_text_size"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/todoDetailsDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To Do Notes:"
                android:textColor="@color/todoTitle"
                android:textSize="@dimen/detailsDescription"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/todoDetailsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                                                             "
                android:textSize="@dimen/detailsDescription"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/todoDueDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="To Do Due Date:"
                android:textColor="@color/todoTitle"
                android:textSize="@dimen/detailsDescription"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/todoDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                                                             "
                android:textColor="@color/todoDueDate"
                android:textSize="@dimen/detailsDescription"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/todoStatusLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/todoDetailsStatus"
                android:textColor="@color/todoTitle"
                android:textSize="@dimen/detailsDescription"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <Switch
                android:id="@+id/detailStatusSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
